<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Payment"
    tools:ignore="ExtraText"
    android:background="@mipmap/order">


    <TextView
        android:id="@+id/cashText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/total_0000"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/nameCard"
        style="@style/editext1"
        android:layout_marginTop="330dp"
        android:background="@drawable/text"
        android:hint="@string/name"
        android:inputType="text"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/numberCard"
        style="@style/editext1"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/nameCard"
        android:background="@drawable/text"
        android:hint="@string/card_number"
        android:inputType="number"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/expirate_date"
        style="@style/editext2"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/numberCard"
        android:background="@drawable/text"
        android:hint="@string/expirate_date"
        android:inputType="date"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/csv"
        style="@style/editext2"
        android:layout_alignBaseline="@+id/expirate_date"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/expirate_date"
        android:background="@drawable/text"
        android:hint="@string/csv"
        android:inputType="number"
        android:visibility="gone"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="510dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/credit_card"
            android:textSize="17dp"
            android:textColor="@color/purple_200" />

        <RadioButton
            android:id="@+id/cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/cash"
            android:textSize="17dp"
            android:textColor="@color/purple_200" />
    </RadioGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/paybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginLeft="320dp"
        android:layout_marginTop="500dp"
        android:layout_marginBottom="37dp"
        android:backgroundTint="@color/purple_200"
        android:src="@mipmap/pay"
        android:onClick="finallyPaymant"/>


</RelativeLayout>