<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityStore"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/txt_total"
        android:layout_width="227dp"
        android:layout_height="41dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="94dp"
        android:layout_marginStart="17dp"
        android:text="@string/total"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        app:fontFamily="sans-serif"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="476dp" />

    <ListView
        android:id="@+id/lista"
        android:layout_width="match_parent"
        android:layout_height="475dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_cancelar"
        style="@style/botones"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_pago"
        android:layout_alignTop="@+id/txt_total"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/boton"
        android:onClick="borrarPedido"
        android:text="@string/cancelar"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_pago"
        style="@style/botones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txt_total"
        android:layout_alignEnd="@+id/btn_cancelar"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="224dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/boton"
        android:text="@string/pago"
        android:textColor="@color/white"
        android:onClick="pay"/>

</RelativeLayout>